# s10

./: .gitignore  Makefile  README.md  data_b.mtx  log.txt  main.c  parse  parse.c  solver.c  temp.c
case/: time_memory.out
cholmod_demo/: .gitignore  chol_solver.c
cs_demo/: .gitignore  Makefile  cs_demo.c
cxsolver/: .gitignore  Makefile  solver.c
klu_demo/: .gitignore  CMakeLists.txt  Makefile  kludemo.c  solver.c  solver.h
mkl_demo/: dss_unsym.c  pardiso_unsym_csc.c
parse/: .gitignore  CMakeLists.txt  Makefile  main  output_4.data  parse.c  parser.c  parser.h  parser_demo.c  parser_orig.c
